put cloudbees badge in adequate <div>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,10 +32,11 @@
         </div>
         <div id="footer">
             <div class="container">
-                <div class="muted-credit">Copyright Devoxx 2013 - <a href="#/about">About this app</a></div>
-                <a href="http://www.cloudbees.com">
-                <img src="http://www.cloudbees.com/sites/default/files/Button-Powered-by-CB.png" alt="Powered by CloudBees" border="0"/>
-                </a>
+                <div class="muted-credit">Copyright Devoxx 2013 - <a href="#/about">About this app</a>
+                  <a href="http://www.cloudbees.com">
+                    <img src="http://www.cloudbees.com/sites/default/files/Button-Powered-by-CB.png" alt="Powered by CloudBees" border="0"/>
+                  </a>
+                </div>
             </div>
         </div>
     </body>
