--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,12 +16,13 @@
                         <div class="nav-collapse collapse">
                             <ul class="nav">
                                 <li><a href="#/">Home</a></li>
-                                <li><a href="#/speaker">Speaker</a></li>
-                                <li><a href="#/prg_cmt">Programme Committee</a></li>
+                                <li><a href="#/speaker">Proposals</a></li>
+                                <li><a href="#/prg_cmt">Review</a></li>
                                 <li><a href="#/admin">Admin</a></li>
                                 <li><a href="#/contact">Contact</a></li>
                             </ul>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -40,13 +41,13 @@
             </div>
         </div>
     </body>
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <!--<script src="http://underscorejs.org/underscore.js"></script>-->
     <script src="js/angular.js" type="text/javascript"></script>
     <script src="js/angular-resource.js" type="text/javascript"></script>
     <script src="js/bootstrap-2.3.1.js"></script>
-    <script src="https://raw.github.com/angular-ui/bootstrap/gh-pages/ui-bootstrap-tpls-0.2.0.js"></script>
-    <script src="https://raw.github.com/mgcrea/angular-strap/master/dist/angular-strap.min.js"></script>
+    <script src="js/ui-bootstrap-tpls-0.2.0.js" type="text/javascript" ></script>
+    <script src="js/angular-strap.min.js" type="text/javascript" ></script>
     <script src="js/services.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/directives.js" type="text/javascript"></script>
