reapplied cosmetic change by Stephan

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
                         <div class="nav-collapse collapse">
                             <ul class="nav">
                                 <li><a href="#/">Home</a></li>
-                                <li><a href="#/speaker">Speaker</a></li>
+                                <li><a href="#/speaker">Proposals</a></li>
                                 <li><a href="#/contact">Contact</a></li>
                                 <li><a ng-click="logout()">Logout</a></li>
                             </ul>
