reapplied another cosmetic change

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,17 +41,17 @@
         </div>
     </body>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="js/lib/angular.js" type="text/javascript"></script>
-    <script src="js/lib/angular-cookies.js" type="text/javascript"></script>
-    <script src="js/lib/angular-resource.js" type="text/javascript"></script>
-    <script src="js/lib/bootstrap-2.3.1.js"></script>
-    <script src="js/ui-bootstrap-tpls-0.2.0.js" type="text/javascript" ></script>
-    <script src="js/angular-strap.min.js" type="text/javascript" ></script>
-    <script src="js/services.js" type="text/javascript"></script>
-    <script src="js/app.js" type="text/javascript"></script>
-    <script src="js/directives.js" type="text/javascript"></script>
-    <script src="js/filters.js" type="text/javascript"></script>
-    <script src="js/generic_controllers.js" type="text/javascript"></script>
-    <script src="js/speaker/controllers.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/lib/angular.js"></script>
+    <script type="text/javascript" src="js/lib/angular-cookies.js"></script>
+    <script type="text/javascript" src="js/lib/angular-resource.js"></script>
+    <script type="text/javascript" src="js/lib/bootstrap-2.3.1.js"></script>
+    <script type="text/javascript" src="js/ui-bootstrap-tpls-0.2.0.js"></script>
+    <script type="text/javascript" src="js/angular-strap.min.js"></script>
+    <script type="text/javascript" src="js/services.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/directives.js"></script>
+    <script type="text/javascript" src="js/filters.js"></script>
+    <script type="text/javascript" src="js/generic_controllers.js"></script>
+    <script type="text/javascript" src="js/speaker/controllers.js"></script>
 
 </html>
