--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-<html ng-app="DevoxxCfpApp">
-
+<html class="no-js" ng-app="DevoxxCfpApp">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -15,11 +10,12 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/meanmenu.css">
     <link rel="stylesheet" href="css/uniform.css">
 
     <script type="text/javascript" src="js/vendor/modernizr-2.6.2.min.js"></script>
 
-    <!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>-->
+    <script type="text/javascript" src="js/vendor/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="js/lib/angular.js"></script>
     <script type="text/javascript" src="js/lib/angular-cookies.js"></script>
     <script type="text/javascript" src="js/lib/angular-resource.js"></script>
@@ -33,8 +29,9 @@
     <script type="text/javascript" src="js/generic_controllers.js"></script>
     <script type="text/javascript" src="js/speaker/controllers.js"></script>
 
-    <script src="js/vendor/jquery-1.9.1.min.js"></script>
+    <!--<script src="js/vendor/jquery-1.9.1.min.js"></script>-->
     <!--<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>-->
+    <script type="text/javascript" src="js/vendor/jquery.meanmenu.2.0.min.js"></script>
     <script type="text/javascript" src="js/vendor/jquery.uniform.min.js"></script>
     <script type="text/javascript" src="js/vendor/jquery.bxslider.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
@@ -49,22 +46,19 @@
 
 </head>
 
-    <body class="front">
+<body class="callforpapers">
     <!--[if lt IE 7]>
     <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
 
     <header>
         <div class="grid">
-
             <div class="row">
-                <div class="col7">
-
+				<div class="col6">
                     <a href="#"><img src="images/devoxx_logo.gif"></a>
-
                 </div>
 
-                <nav class="col13">
+				<nav class="col14" ng-controller="LoginCtrl">
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li class="submenu subleft">
@@ -74,7 +68,8 @@
                                 <li><a href="speakers.html">Speakers</a></li>
                             </ul>
                         </li>
-                        <li class="submenu subright"><a href="#">Practical</a>
+                        <li class="submenu subright">
+                            <a href="#">Practical</a>
                             <ul>
                                 <li><a href="faq.html">FAQ</a></li>
                                 <li><a href="team.html">Team</a></li>
@@ -85,90 +80,161 @@
                         <li class="btn hide_mobile">
                             <a href="#">Buy tickets</a>
                         </li>
-                        <span ng-controller="LoginCtrl">
-                            <li class="btn popup login btn_grey"  ng-hide="currentUser()">
-                                <a href="#">Login</a>
-                                <div class="popup" >
-                                    <form>
-                                        <input type="text" name="login" value="" placeholder="E-mail" ng-model="model.email" />
-                                        <input type="password" name="pass" value="" placeholder="Password" ng-model="model.password" devoxx-on-return-key="login()"/>
-                                        <a href="#">Register</a>
-                                        <input type="submit" name="submit" value="Login" class="btn" ng-click="login()"/>
-                                    </form>
-                                </div>
-                            </li>
-                            <li class="submenu subright"  ng-show="currentUser()">
-                                <a href="#">User (icon)</a>
-                                <ul>
-                                    <li><a href="#" ng-click="logout()">Logout</a></li>
-                                    <li><a href="#/speaker/proposals">Proposals</a></li>
-                                    <li><a href="#">Review</a></li>
-                                    <li><a href="#">Admin</a></li>
-                                    <li><a href="#/profile">Profile</a></li>
-                                </ul>
-                            </li>
-                        </span>
+                        <li class="btn popup login btn_grey" ng-hide="currentUser()">
+                            <a href="#">Login</a>
+                            <ul>
+                                <li>
+                                    <div class="popup">
+                                        <form>
+                                            <input type="text" name="login" value="" placeholder="E-mail" ng-model="model.email" />
+                                            <input type="password" name="pass" value="" placeholder="Password" ng-model="model.password" devoxx-on-return-key="login()"/>
+                                            <a href="#">Register</a>
+                                            <input type="submit" name="submit" value="Login" class="btn" ng-click="login()"/>
+                                        </form>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="submenu subright"  ng-show="currentUser()">
+                            <a href="#">User (icon)</a>
+                            <ul>
+                                <li><a href="#" ng-click="logout()">Logout</a></li>
+                                <li><a href="#/speaker/proposals">Proposals</a></li>
+                                <li><a href="#">Review</a></li>
+                                <li><a href="#">Admin</a></li>
+                                <li><a href="#/profile">Profile</a></li>
+                            </ul>
+                        </li>
 
                         <li class="popup search">
                             <a href="#">Search</a>
-                            <div class="popup">
-                                <form>
-                                    <input type="text" name="search" value="" placeholder="search..." />
-                                </form>
-
-                                <ol>
-                                    <li>
-                                        <a href="#">
-                                            <img src="images_dummy/search_icon1_dummy.jpg" alt="" />
-                                            <div class="title">Lorum ipsum dolor</div>
-                                            <div class="subtitle">Mobi leo risus</div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
-                                            <div class="title">Lorum ipsum dolor</div>
-                                            <div class="subtitle">Mobi leo risus</div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
-                                            <div class="title">Lorum ipsum dolor</div>
-                                            <div class="subtitle">Mobi leo risus</div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="images_dummy/search_icon1_dummy.jpg" alt="" />
-                                            <div class="title">Lorum ipsum dolor</div>
-                                            <div class="subtitle">Mobi leo risus</div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
-                                            <div class="title">Lorum ipsum dolor</div>
-                                            <div class="subtitle">Mobi leo risus</div>
-                                        </a>
-                                    </li>
-                                </ol>
-                            </div>
+                            <ul>
+                                <li>
+                                    <div class="popup">
+                                        <form>
+                                            <input type="text" name="search" value="" placeholder="search..." />
+                                        </form>
+                                        <ol>
+                                            <li>
+                                                <a href="#">
+                                                    <img src="images_dummy/search_icon1_dummy.jpg" alt="" />
+                                                    <div class="title">Lorum ipsum dolor</div>
+                                                    <div class="subtitle">Mobi leo risus</div>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
+                                                    <div class="title">Lorum ipsum dolor</div>
+                                                    <div class="subtitle">Mobi leo risus</div>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
+                                                    <div class="title">Lorum ipsum dolor</div>
+                                                    <div class="subtitle">Mobi leo risus</div>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <img src="images_dummy/search_icon1_dummy.jpg" alt="" />
+                                                    <div class="title">Lorum ipsum dolor</div>
+                                                    <div class="subtitle">Mobi leo risus</div>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
+                                                    <div class="title">Lorum ipsum dolor</div>
+                                                    <div class="subtitle">Mobi leo risus</div>
+                                                </a>
+                                            </li>
+                                        </ol>
+                                    </div>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </nav>
             </div>
-
         </div>
         <div id="submenu">
-
         </div>
     </header>
+    <div class="menuSpacer"></div>
 
     <div class="container" ng-controller="AppCtrl">
         <ng-view/>
     </div>
 
-    </body>
+    <footer class="area grey">
+        <div class="grid">
 
+            <div class="row">
+                <div class="col5">
+                    <h4>previous editions</h4>
+                    <ul>
+                        <li><a href="#">Edition 2012</a></li>
+                        <li><a href="#">Edition 2011</a></li>
+                        <li><a href="#">Edition 2010</a></li>
+                        <li><a href="#">Edition 2009</a></li>
+                    </ul>
+
+                    <h4>Site map</h4>
+                    <ul>
+                        <li><a href="#">Schedule</a></li>
+                        <li><a href="#">Speakers overview</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Practical</a></li>
+                    </ul>
+                </div>
+
+                <div class="col5">
+                    <h4>Other countries</h4>
+                    <ul>
+                        <li><a href="#">Devoxx Paris</a></li>
+                        <li><a href="#">Devoxx London</a></li>
+                        <li><a href="#">Devoxx here name</a></li>
+                    </ul>
+
+                    <h4>Follow us</h4>
+                    <ul>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Twitter</a></li>
+                    </ul>
+                </div>
+
+                <div class="col10 sponsors">
+                    <h4>Our sponsors</h4>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <div id="disclaimer" class="area black">
+        <div class="grid">
+            <div class="row">
+                <div class="col11">
+                    <a href="#">privacy policy</a> | <a href="#">disclaimer</a>
+                </div>
+                <div class="col9">
+                    design by <a href="http://www.three-sixty.be" target="_blank">Three-Sixty Media</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</body>
+
+<!--[if lt IE 7]> <script type="text/javascript">document.documentElement.className += " no-js lt-ie9 lt-ie8 lt-ie7";</script> <![endif]-->
+<!--[if IE 7]>    <script type="text/javascript">document.documentElement.className += " no-js lt-ie9 lt-ie8";</script> <![endif]-->
+<!--[if IE 8]>    <script type="text/javascript">document.documentElement.className += " no-js lt-ie9";</script> <![endif]-->
+<!--[if gt IE 8]> <script type="text/javascript">document.documentElement.className += " no-js";</script> <![endif]-->
 </html>
