--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,8 +20,8 @@
     <script type="text/javascript" src="js/lib/angular-cookies.js"></script>
     <script type="text/javascript" src="js/lib/angular-resource.js"></script>
     <!--<script type="text/javascript" src="js/lib/bootstrap-2.3.1.js"></script>-->
-    <script type="text/javascript" src="js/ui-bootstrap-tpls-0.2.0.js"></script>
-    <script type="text/javascript" src="js/angular-strap.min.js"></script>
+    <script type="text/javascript" src="js/lib/ui-bootstrap-tpls-0.2.0.js"></script>
+    <script type="text/javascript" src="js/lib/angular-strap.min.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/directives.js"></script>
