--- a/app/index.html
+++ b/app/index.html
@@ -15,13 +15,11 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/meanmenu.css">
     <link rel="stylesheet" href="styles/uniform.css">
+    <link rel="stylesheet" href="styles/devoxx.css">
     <!-- build:css styles/main.css -->
     <!-- endbuild -->
-
-    <!--[if lt IE 7]>
-      <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
-    <![endif]-->
 
     <!--[if lt IE 9]>
       <script src="components/es5-shim/es5-shim.js"></script>
@@ -29,22 +27,28 @@
     <![endif]-->
 
     <script src="components/modernizr/modernizr.js"></script>
-
     <script src="components/unstable-angular-complete/angular.js"></script>
     <script src="components/unstable-angular-complete/angular-resource.js"></script>
     <script src="components/unstable-angular-complete/angular-cookies.js"></script>
+    <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="components/jquery/jquery.js"></script>
     <script src="components/bxslider-4/jquery.bxslider.js"></script>
+    <script src="components/meanmenu/jquery.meanmenu.js"></script>
     <script src="components/jquery.uniform/jquery.uniform.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
-    <script src="scripts/services.js"></script>
     <script src="scripts/config.js"></script>
+    <script src="scripts/not_in_karma/run.js"></script>
+    <script src="scripts/services.js"></script>
     <script src="scripts/directives.js"></script>
     <script src="scripts/filters.js"></script>
     <script src="scripts/generic_controllers.js"></script>
-    <script src="scripts/speaker/controllers.js"></script>
+    <script src="scripts/speaker/module.js"></script>
+    <script src="scripts/speaker/Global.js"></script>
+    <script src="scripts/speaker/Proposals.js"></script>
+    <script src="scripts/speaker/SubmitProposal.js"></script>
+    <script src="scripts/speaker/ProposalDetails.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
 
@@ -55,25 +59,20 @@
             g.src='//www.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
-
 </head>
-
-<body class="front" ng-app="cfpSpeakerApp">
+<body class="callforpapers" ng-app="cfpSpeakerApp">
     <!--[if lt IE 7]>
     <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
 
     <header>
         <div class="grid">
-
             <div class="row">
-                <div class="col7">
-
+				<div class="col6">
                     <a href="#"><img src="images/devoxx_logo.gif"></a>
-
                 </div>
 
-                <nav class="col13">
+				<nav class="col14" ng-controller="LoginCtrl">
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li class="submenu subleft">
@@ -83,7 +82,8 @@
                                 <li><a href="speakers.html">Speakers</a></li>
                             </ul>
                         </li>
-                        <li class="submenu subright"><a href="#">Practical</a>
+                        <li class="submenu subright">
+                            <a href="#">Practical</a>
                             <ul>
                                 <li><a href="faq.html">FAQ</a></li>
                                 <li><a href="team.html">Team</a></li>
@@ -94,89 +94,157 @@
                         <li class="btn hide_mobile">
                             <a href="#">Buy tickets</a>
                         </li>
-                        <span ng-controller="LoginCtrl">
-                            <li class="btn popup login btn_grey"  ng-hide="currentUser()">
-                                <a href="#">Login</a>
-                                <div class="popup" >
-                                    <form>
-                                        <input type="text" name="login" value="" placeholder="E-mail" ng-model="model.email" />
-                                        <input type="password" name="pass" value="" placeholder="Password" ng-model="model.password" devoxx-on-return-key="login()"/>
-                                        <a href="#">Register</a>
-                                        <input type="submit" name="submit" value="Login" class="btn" ng-click="login()"/>
-                                    </form>
-                                </div>
-                            </li>
-                            <li class="submenu subright"  ng-show="currentUser()">
-                                <a href="#">User (icon)</a>
-                                <ul>
-                                    <li><a href="#" ng-click="logout()">Logout</a></li>
-                                    <li><a href="#/speaker/proposals">Proposals</a></li>
-                                    <li><a href="#">Review</a></li>
-                                    <li><a href="#">Admin</a></li>
-                                    <li><a href="#/profile">Profile</a></li>
-                                </ul>
-                            </li>
-                        </span>
+                        <li class="btn popup login btn_grey" ng-hide="currentUser">
+                            <a>Login</a>
+                            <ul>
+                                <li>
+                                    <div class="popup">
+                                        <form>
+                                            <input type="text" name="login" value="" placeholder="E-mail" ng-model="model.email" />
+                                            <input type="password" name="pass" value="" placeholder="Password" ng-model="model.password" devoxx-on-return-key="login()"/>
+                                            <a href="#">Register</a>
+                                            <input type="submit" name="submit" value="Login" class="btn" ng-click="login()"/>
+                                        </form>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="submenu subright" ng-show="currentUser">
+                            <a>User (icon)</a>
+                            <ul>
+                                <li><a href="#/speaker" ng-click="logout()">Logout</a></li>
+                                <li><a href="#/speaker/proposals">Proposals</a></li>
+                                <li><a href="#">Review</a></li>
+                                <li><a href="#">Admin</a></li>
+                                <li><a href="#/profile">Profile</a></li>
+                            </ul>
+                        </li>
 
                         <li class="popup search">
                             <a href="#">Search</a>
-                            <div class="popup">
-                                <form>
-                                    <input type="text" name="search" value="" placeholder="search..." />
-                                </form>
-
-                                <ol>
-                                    <li>
-                                        <a href="#">
-                                            <img src="images_dummy/search_icon1_dummy.jpg" alt="" />
-                                            <div class="title">Lorum ipsum dolor</div>
-                                            <div class="subtitle">Mobi leo risus</div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
-                                            <div class="title">Lorum ipsum dolor</div>
-                                            <div class="subtitle">Mobi leo risus</div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
-                                            <div class="title">Lorum ipsum dolor</div>
-                                            <div class="subtitle">Mobi leo risus</div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="images_dummy/search_icon1_dummy.jpg" alt="" />
-                                            <div class="title">Lorum ipsum dolor</div>
-                                            <div class="subtitle">Mobi leo risus</div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
-                                            <div class="title">Lorum ipsum dolor</div>
-                                            <div class="subtitle">Mobi leo risus</div>
-                                        </a>
-                                    </li>
-                                </ol>
-                            </div>
+                            <ul>
+                                <li>
+                                    <div class="popup">
+                                        <form>
+                                            <input type="text" name="search" value="" placeholder="search..." />
+                                        </form>
+                                        <ol>
+                                            <li>
+                                                <a href="#">
+                                                    <img src="images_dummy/search_icon1_dummy.jpg" alt="" />
+                                                    <div class="title">Lorum ipsum dolor</div>
+                                                    <div class="subtitle">Mobi leo risus</div>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
+                                                    <div class="title">Lorum ipsum dolor</div>
+                                                    <div class="subtitle">Mobi leo risus</div>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
+                                                    <div class="title">Lorum ipsum dolor</div>
+                                                    <div class="subtitle">Mobi leo risus</div>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <img src="images_dummy/search_icon1_dummy.jpg" alt="" />
+                                                    <div class="title">Lorum ipsum dolor</div>
+                                                    <div class="subtitle">Mobi leo risus</div>
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a href="#">
+                                                    <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
+                                                    <div class="title">Lorum ipsum dolor</div>
+                                                    <div class="subtitle">Mobi leo risus</div>
+                                                </a>
+                                            </li>
+                                        </ol>
+                                    </div>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                 </nav>
             </div>
-
         </div>
         <div id="submenu">
-
         </div>
     </header>
+    <div class="menuSpacer"></div>
 
     <div class="container" ng-controller="AppCtrl">
         <ng-view/>
     </div>
 
+    <footer class="area grey">
+        <div class="grid">
+
+            <div class="row">
+                <div class="col5">
+                    <h4>previous editions</h4>
+                    <ul>
+                        <li><a href="#">Edition 2012</a></li>
+                        <li><a href="#">Edition 2011</a></li>
+                        <li><a href="#">Edition 2010</a></li>
+                        <li><a href="#">Edition 2009</a></li>
+                    </ul>
+
+                    <h4>Site map</h4>
+                    <ul>
+                        <li><a href="#">Schedule</a></li>
+                        <li><a href="#">Speakers overview</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Practical</a></li>
+                    </ul>
+                </div>
+
+                <div class="col5">
+                    <h4>Other countries</h4>
+                    <ul>
+                        <li><a href="#">Devoxx Paris</a></li>
+                        <li><a href="#">Devoxx London</a></li>
+                        <li><a href="#">Devoxx here name</a></li>
+                    </ul>
+
+                    <h4>Follow us</h4>
+                    <ul>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Twitter</a></li>
+                    </ul>
+                </div>
+
+                <div class="col10 sponsors">
+                    <h4>Our sponsors</h4>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <div id="disclaimer" class="area black">
+        <div class="grid">
+            <div class="row">
+                <div class="col11">
+                    <a href="#">privacy policy</a> | <a href="#">disclaimer</a>
+                </div>
+                <div class="col9">
+                    design by <a href="http://www.three-sixty.be" target="_blank">Three-Sixty Media</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
