--- a/app/index.html
+++ b/app/index.html
@@ -76,13 +76,13 @@
 				<nav class="col14" ng-controller="LoginCtrl">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li class="submenu subleft">
-                            <a href="#">Program</a>
-                            <ul>
-                                <li><a href="schedule.html">Schedule</a></li>
-                                <li><a href="speakers.html">Speakers</a></li>
-                            </ul>
-                        </li>
+                        <!--<li class="submenu subleft">-->
+                            <!--<a href="#">Program TBA</a>-->
+                            <!--<ul>-->
+                                <!--<li><a href="#">Schedule</a></li>-->
+                                <!--<li><a href="#">Speakers</a></li>-->
+                            <!--</ul>-->
+                        <!--</li>-->
                         <li class="submenu subright">
                             <a href="#">Practical</a>
                             <ul>
@@ -92,9 +92,9 @@
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </li>
-                        <li class="btn hide_mobile">
-                            <a href="#">Buy tickets</a>
-                        </li>
+                        <!--<li class="btn hide_mobile">-->
+                            <!--<a href="#">Buy tickets</a>-->
+                        <!--</li>-->
                         <li class="btn popup login btn_grey" ng-hide="model.currentUser">
                             <a>Login</a>
                             <ul>
@@ -116,8 +116,6 @@
                             <ul>
                                 <li><a href="#/speaker" ng-click="logout()">Logout</a></li>
                                 <li><a href="#/speaker/proposals">Proposals</a></li>
-                                <li><a href="#">Review</a></li>
-                                <li><a href="#">Admin</a></li>
                                 <li><a href="#/profile">Profile</a></li>
                             </ul>
                         </li>
@@ -191,15 +189,15 @@
                 <div class="col5">
                     <h4>previous editions</h4>
                     <ul>
-                        <li><a href="#">Edition 2012</a></li>
-                        <li><a href="#">Edition 2011</a></li>
-                        <li><a href="#">Edition 2010</a></li>
-                        <li><a href="#">Edition 2009</a></li>
+                        <li><a href="http://devoxx.com/display/DV12/Home">Edition 2012</a></li>
+                        <li><a href="http://devoxx.com/display/DV11/Home">Edition 2011</a></li>
+                        <li><a href="http://devoxx.com/display/Devoxx2K10/Home">Edition 2010</a></li>
+                        <li><a href="http://devoxx.com/display/DV09/Home">Edition 2009</a></li>
                     </ul>
 
                     <h4>Site map</h4>
                     <ul>
-                        <li><a href="#">Schedule</a></li>
+                        <li><a href="#">Schedule TBA</a></li>
                         <li><a href="#">Speakers overview</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Practical</a></li>
@@ -209,26 +207,22 @@
                 <div class="col5">
                     <h4>Other countries</h4>
                     <ul>
-                        <li><a href="#">Devoxx Paris</a></li>
-                        <li><a href="#">Devoxx London</a></li>
-                        <li><a href="#">Devoxx here name</a></li>
+                        <li><a href="http://www.devoxx.fr">Devoxx France</a></li>
+                        <li><a href="http://www.devoxx.co.uk">Devoxx UK</a></li>
                     </ul>
 
                     <h4>Follow us</h4>
                     <ul>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
+                        <li><a href="https://www.facebook.com/devoxxcom">Facebook</a></li>
+                        <li><a href="https://twitter.com/devoxx">Twitter</a></li>
                     </ul>
                 </div>
 
                 <div class="col10 sponsors">
                     <h4>Our sponsors</h4>
                     <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
-                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
-                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
-                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
-                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
-                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Oracle" /></a>
+                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="JBoss" /></a>
                 </div>
             </div>
         </div>
@@ -238,10 +232,8 @@
         <div class="grid">
             <div class="row">
                 <div class="col11">
-                    <a href="#">privacy policy</a> | <a href="#">disclaimer</a>
-                </div>
-                <div class="col9">
-                    design by <a href="http://www.three-sixty.be" target="_blank">Three-Sixty Media</a>
+                    <a href="#">privacy policy</a>
+                    <!--| <a href="#">disclaimer</a>-->
                 </div>
             </div>
         </div>
