Venue and About refactored

--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
                             <ul>
                                 <li><a href="faq.html">FAQ</a></li>
                                 <li><a href="team.html">Team</a></li>
-                                <li><a href="venue.html">Venue</a></li>
+                                <li><a href="views/practical/venue.html">Venue</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </li>
@@ -197,11 +197,10 @@
 
                     <h4>Site map</h4>
                     <ul>
+                        <li><a href="#about">About CFP</a></li>
+                        <li><a href="#venue">Venue</a></li>
                         <li><a href="#">Schedule TBA</a></li>
                         <li><a href="#">Speakers TBA</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Practical</a></li>
-                        <li><a href="venue.html">Venue</a></li>
                     </ul>
                 </div>
 
