More static content

--- a/app/index.html
+++ b/app/index.html
@@ -86,10 +86,10 @@
                         <li class="submenu subright">
                             <a href="#">Practical</a>
                             <ul>
-                                <li><a href="faq.html">FAQ</a></li>
-                                <li><a href="team.html">Team</a></li>
-                                <li><a href="views/practical/venue.html">Venue</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="#faq">FAQ</a></li>
+                                <li><a href="#team">Team</a></li>
+                                <li><a href="#venue">Venue</a></li>
+                                <li><a href="#contact">Contact</a></li>
                             </ul>
                         </li>
                         <!--<li class="btn hide_mobile">-->
@@ -197,8 +197,11 @@
 
                     <h4>Site map</h4>
                     <ul>
+                        <li><a href="#team">Team</a></li>
+                        <li><a href="#contact">Contact</a></li>
                         <li><a href="#about">About CFP</a></li>
                         <li><a href="#venue">Venue</a></li>
+                        <li><a href="#faq">FAQ</a></li>
                         <li><a href="#">Schedule TBA</a></li>
                         <li><a href="#">Speakers TBA</a></li>
                     </ul>
