- More sponsor images - Added more static text

--- a/app/index.html
+++ b/app/index.html
@@ -223,9 +223,9 @@
 
                 <div class="col10 sponsors">
                     <h4>Our sponsors</h4>
-                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Google" /></a>
-                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="Oracle" /></a>
-                    <a href="#" target="_blank"><img src="images_dummy/sponsor_google.png" alt="JBoss" /></a>
+                    <a href="https://developers.google.com/" target="_blank"><img src="images/sponsors/google.png" alt="Google" /></a>
+                    <a href="http://www.oracle.com/us/technologies/java/overview/index.html" target="_blank"><img src="images/sponsors/oracle.png" alt="Oracle" /></a>
+                    <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/Jboss.png" alt="JBoss" /></a>
                 </div>
             </div>
         </div>
