Update sponsor image name

--- a/app/index.html
+++ b/app/index.html
@@ -225,7 +225,7 @@
                     <h4>Our sponsors</h4>
                     <a href="https://developers.google.com/" target="_blank"><img src="images/sponsors/google.png" alt="Google" /></a>
                     <a href="http://www.oracle.com/us/technologies/java/overview/index.html" target="_blank"><img src="images/sponsors/oracle.png" alt="Oracle" /></a>
-                    <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/Jboss.png" alt="JBoss" /></a>
+                    <a href="http://www.wildfly.org/" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss" /></a>
                 </div>
             </div>
         </div>
