working edit screen and partial working validation messages

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,6 @@
     <script src="scripts/filters.js"></script>
     <script src="scripts/generic_controllers.js"></script>
     <script src="scripts/speaker/module.js"></script>
-    <script src="scripts/speaker/Global.js"></script>
     <script src="scripts/speaker/Proposals.js"></script>
     <script src="scripts/speaker/SubmitProposal.js"></script>
     <script src="scripts/speaker/ProposalDetails.js"></script>
@@ -112,7 +111,7 @@
                             </ul>
                         </li>
                         <li class="submenu subright" ng-show="model.currentUser">
-                            <a>User (icon)</a>
+                            <a>User <img src="http://icons.iconarchive.com/icons/visualpharm/icons8-metro-style/512/Users-User-icon.png" height="12" width="12"></a>
                             <ul>
                                 <li><a href="#/speaker" ng-click="logout()">Logout</a></li>
                                 <li><a href="#/speaker/proposals">Proposals</a></li>
