Added draft FAQ, Team and Contact Us

--- a/app/index.html
+++ b/app/index.html
@@ -148,61 +148,61 @@
                         </ul>
                     </li>
 
-                    <li class="popup search">
-                        <a href="#">Search</a>
-                        <ul>
-                            <li>
-                                <div class="popup">
-                                    <form>
-                                        <input type="text" name="search" value="" placeholder="search..."/>
-                                    </form>
+                    <!--<li class="popup search">-->
+                        <!--<a href="#">Search</a>-->
+                        <!--<ul>-->
+                            <!--<li>-->
+                                <!--<div class="popup">-->
+                                    <!--<form>-->
+                                        <!--<input type="text" name="search" value="" placeholder="search..."/>-->
+                                    <!--</form>-->
 
-                                    <ol>
-                                        <li>
-                                            <a href="#">
-                                                <img src="images_dummy/search_icon1_dummy.jpg" alt=""/>
+                                    <!--<ol>-->
+                                        <!--<li>-->
+                                            <!--<a href="#">-->
+                                                <!--<img src="images_dummy/search_icon1_dummy.jpg" alt=""/>-->
 
-                                                <div class="title">Lorum ipsum dolor</div>
-                                                <div class="subtitle">Mobi leo risus</div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <img src="images_dummy/search_icon2_dummy.jpg" alt=""/>
+                                                <!--<div class="title">Lorum ipsum dolor</div>-->
+                                                <!--<div class="subtitle">Mobi leo risus</div>-->
+                                            <!--</a>-->
+                                        <!--</li>-->
+                                        <!--<li>-->
+                                            <!--<a href="#">-->
+                                                <!--<img src="images_dummy/search_icon2_dummy.jpg" alt=""/>-->
 
-                                                <div class="title">Lorum ipsum dolor</div>
-                                                <div class="subtitle">Mobi leo risus</div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <img src="images_dummy/search_icon2_dummy.jpg" alt=""/>
+                                                <!--<div class="title">Lorum ipsum dolor</div>-->
+                                                <!--<div class="subtitle">Mobi leo risus</div>-->
+                                            <!--</a>-->
+                                        <!--</li>-->
+                                        <!--<li>-->
+                                            <!--<a href="#">-->
+                                                <!--<img src="images_dummy/search_icon2_dummy.jpg" alt=""/>-->
 
-                                                <div class="title">Lorum ipsum dolor</div>
-                                                <div class="subtitle">Mobi leo risus</div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <img src="images_dummy/search_icon1_dummy.jpg" alt=""/>
+                                                <!--<div class="title">Lorum ipsum dolor</div>-->
+                                                <!--<div class="subtitle">Mobi leo risus</div>-->
+                                            <!--</a>-->
+                                        <!--</li>-->
+                                        <!--<li>-->
+                                            <!--<a href="#">-->
+                                                <!--<img src="images_dummy/search_icon1_dummy.jpg" alt=""/>-->
 
-                                                <div class="title">Lorum ipsum dolor</div>
-                                                <div class="subtitle">Mobi leo risus</div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#">
-                                                <img src="images_dummy/search_icon2_dummy.jpg" alt=""/>
+                                                <!--<div class="title">Lorum ipsum dolor</div>-->
+                                                <!--<div class="subtitle">Mobi leo risus</div>-->
+                                            <!--</a>-->
+                                        <!--</li>-->
+                                        <!--<li>-->
+                                            <!--<a href="#">-->
+                                                <!--<img src="images_dummy/search_icon2_dummy.jpg" alt=""/>-->
 
-                                                <div class="title">Lorum ipsum dolor</div>
-                                                <div class="subtitle">Mobi leo risus</div>
-                                            </a>
-                                        </li>
-                                    </ol>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
+                                                <!--<div class="title">Lorum ipsum dolor</div>-->
+                                                <!--<div class="subtitle">Mobi leo risus</div>-->
+                                            <!--</a>-->
+                                        <!--</li>-->
+                                    <!--</ol>-->
+                                <!--</div>-->
+                            <!--</li>-->
+                        <!--</ul>-->
+                    <!--</li>-->
                 </ul>
             </nav>
         </div>
@@ -232,7 +232,7 @@
                 <h4>Site map</h4>
                 <ul>
                     <li><a href="#team">Team</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
                     <li><a href="#about">About CFP</a></li>
                     <li><a href="#venue">Venue</a></li>
                     <li><a href="#faq">FAQ</a></li>
