Added the other Devoxx crew members

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="styles/meanmenu.css">
     <link rel="stylesheet" href="styles/uniform.css">
     <link rel="stylesheet" href="styles/devoxx.css">
+    <link rel="stylesheet" href="styles/isotope.css">
     <!-- build:css styles/main.css -->
     <!-- endbuild -->
 
@@ -40,6 +41,7 @@
     <script src="components/bxslider-4/jquery.bxslider.js"></script>
     <script src="components/meanMenu/jquery.meanmenu.js"></script>
     <script src="components/jquery.uniform/jquery.uniform.js"></script>
+    <script src="components/jquery.isotope/jquery.isotope.min.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
