--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <!-- build:css styles/main.css -->
+    <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -23,15 +25,17 @@
     <link rel="stylesheet" href="styles/uniform.css">
     <link rel="stylesheet" href="styles/devoxx.css">
     <link rel="stylesheet" href="styles/isotope.css">
-    <!-- build:css styles/main.css -->
     <!-- endbuild -->
 
+    <!-- build:js scripts/scripts-ie.js -->
     <!-- TODO: scripts to bottom of the page (performance) -->
     <!--[if lt IE 9]>
     <script src="components/es5-shim/es5-shim.js"></script>
     <script src="components/json3/lib/json3.min.js"></script>
     <![endif]-->
-
+    <!-- endbuild -->
+    
+    <!-- build:js scripts/scripts.js -->
     <script src="components/jquery/jquery.js"></script>
     <script src="components/modernizr/modernizr.js"></script>
     <script src="components/unstable-angular-complete/angular.js"></script>
@@ -41,9 +45,10 @@
     <script src="components/bxslider-4/jquery.bxslider.js"></script>
     <script src="components/meanMenu/jquery.meanmenu.js"></script>
     <script src="components/jquery.uniform/jquery.uniform.js"></script>
-    <script src="components/jquery.isotope/jquery.isotope.min.js"></script>
+    <script src="components/jquery/isotope/jquery.isotope.min.js"></script>
+    <script src="components/moment/moment.js"></script>
 
-    <!-- build:js scripts/scripts.js -->
+    
     <script src="scripts/app.js"></script>
     <script src="scripts/config.js"></script>
     <script src="scripts/services.js"></script>
@@ -109,7 +114,7 @@
                     <!--<a href="#">Buy tickets</a>-->
                     <!--</li>-->
                     <li class="btn popup login btn_grey" ng-hide="model.currentUser()">
-                        <a>Login</a>
+                                <a href="#">Login</a>
                         <ul>
                             <li>
                                 <div class="popup">
@@ -140,15 +145,13 @@
                         </ul>
                     </li>
                     <li class="submenu subright" ng-show="model.currentUser()">
-                        <a>User <img
-                                src="http://icons.iconarchive.com/icons/visualpharm/icons8-metro-style/512/Users-User-icon.png"
-                                height="10" width="10"></a>
-                        <ul>
-                            <li><a href="#/speaker" ng-click="logout()">Logout</a></li>
-                            <li><a href="#/speaker/proposals">Proposals</a></li>
-                            <li><a href="#/profile">Profile</a></li>
-                        </ul>
-                    </li>
+                                <a href="#">User <img src="images/User-icon.png" height="12" width="12" style="margin-top: -1px;"></a>
+                                <ul>
+                                    <li><a href="#/speaker" ng-click="logout()">Logout</a></li>
+                                    <li><a href="#/speaker/proposals">Proposals</a></li>
+                                    <li><a href="#/profile">Profile</a></li>
+                                </ul>
+                            </li>
 
                     <!--<li class="popup search">-->
                         <!--<a href="#">Search</a>-->
