Homepage fixes, tweaks and content

--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css styles/main.css -->
+    
+    <!-- TODO add local resources -->
     <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+
+    <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -45,7 +48,7 @@
     <script src="components/bxslider-4/jquery.bxslider.js"></script>
     <script src="components/meanMenu/jquery.meanmenu.js"></script>
     <script src="components/jquery.uniform/jquery.uniform.js"></script>
-    <script src="components/jquery/isotope/jquery.isotope.min.js"></script>
+    <script src="components/isotope/jquery.isotope.min.js"></script>
     <script src="components/moment/moment.js"></script>
 
     
