Header copywriting and scroll to tracks

--- a/app/index.html
+++ b/app/index.html
@@ -96,7 +96,7 @@
 
             <nav class="col14" ng-controller="LoginCtrl">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#/">Home</a></li>
                     <!--<li class="submenu subleft">-->
                     <!--<a href="#">Program TBA</a>-->
                     <!--<ul>-->
@@ -107,17 +107,17 @@
                     <li class="submenu subright">
                         <a href="#">Practical</a>
                         <ul>
-                            <li><a href="#faq">FAQ</a></li>
-                            <li><a href="#team">Team</a></li>
-                            <li><a href="#venue">Venue</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><a href="#/faq">FAQ</a></li>
+                            <li><a href="#/team">Team</a></li>
+                            <li><a href="#/venue">Venue</a></li>
+                            <li><a href="#/contact">Contact</a></li>
                         </ul>
                     </li>
                     <!--<li class="btn hide_mobile">-->
                     <!--<a href="#">Buy tickets</a>-->
                     <!--</li>-->
                     <li class="btn popup login btn_grey" ng-hide="model.currentUser()">
-                                <a href="#">Login</a>
+                                <a href="">Login</a>
                         <ul>
                             <li>
                                 <div class="popup">
