--- a/app/index.html
+++ b/app/index.html
@@ -42,16 +42,14 @@
     <script src="components/jquery/jquery.js"></script>
     <script src="components/modernizr/modernizr.js"></script>
     <script src="components/unstable-angular-complete/angular.js"></script>
-    <script src="components/unstable-angular-complete/angular-resource.js"></script>
-    <script src="components/unstable-angular-complete/angular-cookies.js"></script>
+    <script src="components/angular-cookies/angular-cookies.js"></script>
     <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="components/bxslider-4/jquery.bxslider.js"></script>
     <script src="components/meanMenu/jquery.meanmenu.js"></script>
     <script src="components/jquery.uniform/jquery.uniform.js"></script>
-    <script src="components/isotope/jquery.isotope.min.js"></script>
+    <script src="components/isotope/jquery.isotope.js"></script>
     <script src="components/moment/moment.js"></script>
 
-    
     <script src="scripts/app.js"></script>
     <script src="scripts/config.js"></script>
     <script src="scripts/services.js"></script>
